# jobsearch

./: .env.example  .gitignore  AGENTS.md  MCP_LOCAL.md  docker-compose.yml  mcp_config_local.json  mcp_server.py  test_mcp_db.py
backend/: config.py  create_readonly_user.sql  investigate_amazon.py  main.py  pyproject.toml  research_amazon.py  server.py  test_amazon_locations.py
backend/api/: app.py  schemas.py
backend/api/routes/: jobs.py  runs.py  sites.py
backend/db/: connection.py  models.py
backend/db/migrations/: alembic.ini  env.py
backend/db/migrations/versions/: 0ff6f9394340_initial_schema.py
backend/docs/: 00_index.md  00_site_setup_guide.md  database_changes.md  mcp_integration.md
backend/docs/autonomous/: amazon_2026-02-28.md  apple_2026-02-28.md  google_2026-02-28.md
backend/docs/sites/: _template.md  amazon.md  apple.md  google.md  xing.md
backend/llm/: fallback.py
backend/rules/: base.py  common.py  filters.py  models.py  registry.py
backend/rules/aggregators/: xing.py
backend/rules/companies/: amazon.py  apple.py  google.py
backend/scraper/: engine.py  pipeline.py
mcp-venv/: pyvenv.cfg
